Bug 189193. With find as you type, don't search text docs for links. r=kyle, sr=henry jia, a=dbaron. Bug 190555. Weird find as you type behavior in framed pages. r=caillon, sr=jst, a=dbaron